--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-85076727-2"></script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -89,10 +88,11 @@
                   <h2> Dockless Data Explorer </h2>
                 </div>
                 <div class="col-4 pr-0 text-center d-flex align-items-center justify-content-center">
-                  <img src="/coa_seaL_lg.jpeg" alt="City of Austin Seal" class="city-seal-img" style="max-width: 95px; width: 100%">
+                  <p>Insert Logo here</p>
+                  <img src="" alt="" style="max-width: 95px; width: 100%">
                 </div>
                 <div class="col-8">
-                  <p>City of Austin Transportation Department</p>
+                  <p>--Institution--</p>
                 </div>
               </div>
             </div>
