--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-4 pr-0 text-center d-flex align-items-center justify-content-center">
                   <p>Insert Logo here</p>
-                  <img src="" alt="" style="max-width: 95px; width: 100%">
+                  <img src="" alt="" class="logo-img" style="max-width: 95px; width: 100%">
                 </div>
                 <div class="col-8">
                   <p>--Institution--</p>
@@ -171,19 +171,10 @@
               </button>
             </div>
             <div class="modal-body text-justify">
-              <p>Use this tool to explore dockless mobility travel patterns 🛴 🚲 🔌.</p>
+              <p>Use this tool to explore dockless mobility travel patterns 🚲.</p>
 
               <p>When you place a point on the map, shaded hexagons will indicate where trips from that region ended. If you switch the flow to origin, the hexagons indicate where trips to that region started.</p>
-
-              <p>We welcome your feedback at 📫 <a href="mailto:transportation.data@austintexas.gov?subject=dockless.austintexas.io">transportation.data@austintexas.gov</a>. Visit the open-source project on <a href="https://github.com/cityofaustin/dockless">Github</a>.</p>
-              <div class="text-center mb-2">
-                <img src="/coa_seaL_lg.jpeg" alt="City of Austin Seal" class="city-seal-img">
               </div>
-              <p class="disclaimer mt-3">
-                <i>
-                  This map has been produced by the City of Austin for the sole purpose of geographic reference. No warranty is made by the City of Austin regarding specific accuracy or completeness.
-                </i>
-              </p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
